Fix card gap, add new backface image

--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -3,4 +3,7 @@
 .board {
   display: grid;
   grid-gap: 0;
+  justify-items: center;
+  align-items: center;
+  line-height: 0;
 }
